<resources>
    <string name="app_name">Exam SOS</string>
    <string name="home_page_name">Home</string>
    <string name="level_page_name">QUIZ SELECTION</string>
    <string name="note_page_name">Note</string>
    <string name="notification_page_name">NOTIFICATION</string>
    <string name="appbar_item_more">More</string>
    <string name="appbar_item_login">Login</string>
    <string name="appbar_item_back">Back</string>
    <string name="appbar_item_logout">Logout</string>
    <string name="appbar_item_settings">Settings</string>
    <string name="appbar_item_about_us">About Us</string>
    <string name="appbar_item_announcement">Announcement</string>
    <string name="login_text_welcome">Welcome to ExamSOS</string>
    <string name="login_text_prompt_email">Please input email address</string>
    <string name="login_text_prompt_password">Please input password</string>
    <string name="login_button_login">Login</string>
    <string name="about_us_text">Information About Developer</string>
    <string name="settings_text">Settings</string>
    <string name="announcement_text">Dummy Announcement</string>
    <string name="note_text">Dummy Note</string>
    <string name="blank_fragment"> blank fragment</string>
    <string name="tree_view">Your Tree</string>
    <string name="main_page_login_day_count">LOGIN DAYS</string>
    <string name="days_unit">DAYS</string>
    <string name="levels_unit">QUIZ</string>
    <string name="level_completed_text">COMPLETED</string>
    <string name="login_welcome_msg">*** Login everyday to grow your tree! ***</string>
    <string name="announcement_header">RECENT ANNOUNCEMENT</string>
    <string name="day_streak_header">DAY STREAK OF THE WEEK</string>
    <string name="quick_start_button">TAKE YOUR DAILY QUIZ</string>
    <string name="fragment_title_home">DASHBOARD</string>
    <string name="fragment_title_levelS">QUIZ CATEGORIES</string>
    <string name="fragment_title_notes">PERFORMANCES</string>
    <string name="fragment_title_notifications">UNREAD NOTIFICATIONS</string>
    <string name="home_streak_icon_1">Monday Streak Icon</string>
    <string name="home_streak_icon_2">Tuesday Streak Icon</string>
    <string name="home_streak_icon_3">Wednesday Streak Icon</string>
    <string name="home_streak_icon_4">Thursday Streak Icon</string>
    <string name="home_streak_icon_5">Friday Streak Icon</string>
    <string name="home_streak_icon_6">Saturday Streak Icon</string>
    <string name="home_streak_icon_7">Sunday Streak Icon</string>
    <string name="home_streak_label_monday">Mon</string>
    <string name="home_streak_label_tuesday">Tue</string>
    <string name="home_streak_label_wednesday">Wed</string>
    <string name="home_streak_label_thursday">Thu</string>
    <string name="home_streak_label_friday">Fri</string>
    <string name="home_streak_label_saturday">Sat</string>
    <string name="home_streak_label_sunday">Sun</string>
    <string name="quick_start_button_label">DAILY QUIZ</string>
    <string name="announcement_icon_description">Announcement Icon</string>
    <string name="dummy_announcement_text">A new quiz category has been released! Check it out!</string>
    <string name="dummy_announcement_header">RELEASE: Politics Category</string>
    <string name="recent_note_title">Quiz Title</string>
    <string name="recent_note_date">accessed on 4/10/2024</string>
    <string name="dummy_recent_note_content">1. Cohesion:\nThe use of linking words and phrases to connect ideas effectively.\n\n2. Lexical Resource:\nA range of vocabulary used appropriately to convey precise meanings.\n\n3. Complex Sentences:\nSentences that combine independent and dependent clauses to enhance writing.\n\n4. Task Achievement:\nThe extent to which the response meets the requirements of the prompt.</string>
    <string name="go_to_notes_button_label">MORE NOTES</string>
    <string name="custom_quiz_icon">CUSTOM\n</string>
    <string name="daily_quiz_icon">DAILY\n</string>
    <string name="random_quiz_icon">RANDOM\n</string>
    <string name="advanced_marathon_icon">MARATHON\n</string>
    <string name="custom_quiz_button">CUSTOM</string>
    <string name="daily_quiz_button">MORE DAILY</string>
    <string name="random_quiz_button">RANDOM</string>
    <string name="advanced_marathon_button">MARATHON</string>
    <string name="go_to_notification_button_label">READ ALL NOTIFICATIONS</string>
    <string name="dummy_username">DUMMY USERNAME</string>
    <string name="dummy_day_streak">10</string>
    <string name="dummy_thing">DUMMY thing</string>
    <string name="dummy_level_completed_number">300</string>
    <string name="toast_message_go_to_notes_button">Displaying More Notes</string>
    <string name="toast_message_fragment_category_daily">Accessing Daily Quiz</string>
    <string name="toast_message_fragment_category_custom">Accessing Quiz Customizing Page</string>
    <string name="fragment_category_marathon">Accessing Quiz Marathon</string>
    <string name="toast_message_fragment_category_random">Accessing Random Quiz</string>
    <string name="toast_quick_start_button">Accessing Daily Quiz</string>
    <string name="toast_message_check_all_notification_button">Redirect To Notifications</string>
    <string name="quiz_category_level_header">Quiz Difficulty</string>
    <string name="quiz_type_header">Quiz Type</string>
    <string name="select_quiz_type_hint">Select A Quiz Type</string>
    <string name="select_quiz_category_level_selector_hint">Select Quiz Category Level</string>
    <string name="level_icon_description">Level Icon\n</string>
    <string name="dummy_level_header">Level Header</string>
    <string name="dummy_level_text">level description\n</string>
    <string name="quiz_selection_instruction">CLICK TO ENTER QUIZ</string>
    <string name="appbar_item_quiz_header">Quiz Tool Bar Header</string>
    <string name="quiz_button_label">RANDOM QUIZ</string>
    <string name="dummy_quiz_question">Quiz Question</string>
    <string name="quiz_multi_top_right_answer">Proclaim</string>
    <string name="quiz_multi_top_left_answer">Intimate</string>
    <string name="quiz_multi_bottom_left_answer">Define</string>
    <string name="quiz_multi_bottom_right_answer">Denounce</string>
    <string name="dummy_quiz_question_number">QUESTION 1</string>
    <string name="quiz_life_icon_1">Quiz Life Icon 1</string>
    <string name="quiz_life_icon_2">Quiz Life Icon 2</string>
    <string name="quiz_life_icon_3">Quiz Life Icon 3</string>
    <string name="login_header_password">PASSWORD</string>
    <string name="login_header_email">EMAIL</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="login_or">or</string>
    <string name="app_logo_desc">login_page_app_logo</string>
    <string name="hide_icon_description">hide</string>
    <string name="register_while_logged_in">Register While Logged In</string>
    <string name="number_of_questions_label">Number Of Question</string>
    <string name="enter_number_of_questions_hint">Select The Number Of Questions</string>
    <string name="number_of_question_slider_min">5</string>
    <string name="number_of_question_slider_max">50</string>
    <string name="number_of_question_slider_description">slider</string>
    <string name="quiz_difficulty_easy">Easy</string>
    <string name="quiz_difficulty_medium">Medium</string>
    <string name="quiz_difficulty_hard">Hard</string>
    <string name="login_text_register">Sign up to enjoy!</string>
    <string name="login_header_username">USERNAME</string>
    <string name="login_text_prompt_username">Please Input Username</string>
    <string name="signup_page_name">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_option_true">TRUE</string>
    <string name="quiz_option_false">FALSE</string>
    <string name="result_winning_message">Congratulations! 🌟</string>
    <string name="result_winning_image">winningImage</string>
    <string name="result_play_again">RESTART</string>
    <string name="result_lives_remaining_msg">Lives Remaining: </string>
    <string name="result_total_leaves">Leaves Obtained: </string>
    <string name="result_number_of_questions">Number of Questions: </string>
    <string name="result_difficulty_hard">Difficulty: </string>
    <string name="result_level_selection_button">RETURN</string>
    <string name="result_difficulty">"Difficulty: "</string>
    <string name="result_losing_message">You Lose… Try Again?</string>
    <string name="about_us_text_long">
    ABOUT US\n\nDeveloper: \n\nHello, my name is Rachel, ExamSOS developer, I am a final year student studying Computer Science. This app is a coursework which I spent days and night for it. Hope you will enjoy. P.S. I am hungry and sleepy.\n\nGAME RULES\n\nObjective:\n\nThe goal of the game is to answer a series of questions correctly earning points for each correct answer. Points can be used to unlock new trees.\n\nGame Modes:\n\n1. Custom Quiz: Choose your own set of categories and difficulty levels for a personalized quiz experience.\n\n2. Daily Quiz: Participate in a new quiz every day with your personalized daily quiz parameter.\n\n3. Random Quiz: Questions are chosen at random from various categories and difficulty levels.\n\n4. Marathon Quiz: Answer as many questions as possible in 150 total questions, with increasing difficulty.\n\nCREDITS\n\n1. Helps: Dr Tom Owen and all the PHD, Master student helper are AMAZING!! \n\n2. Open Trivia Database\n\n3.Visuals: All arts in this app are created by me using Pixel Studio and IBIS Paint, or they are built-in from android studio.\n\n4.Music and Soundtracks: copyright free 8 bit music Krayzius Brainstorm by Virtual Boy and other copyright free soundtracks from https://mixkit.co/
</string>
    <string name="about_us_header">ABOUT US AND RULES AND CREDITS</string>
    <string name="thank_you_text">Thank you for installing</string>
    <string name="quiz_category_header">Quiz Category</string>
    <string name="select_quiz_category_hint">Select a category</string>
    <string name="music_toggle_label">Background Music</string>
    <string name="music_toggle">On</string>
    <string name="music_volume_label">Music Volume</string>
    <string name="music_slider_description">Music Volume Bar</string>
    <string name="settings_header_text">DAILY QUESTION AND APP SETTINGS</string>
    <string name="settings_header_text_app">USER ACCOUNT</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="update_daily_quiz_configuration_button">UPDATE CONFIGURATIONS</string>
    <string name="time_prompt">Choose daily quiz notification time.</string>
    <string name="time_header">Daily Quiz Notification Time</string>
    <string name="quiz_record_item_difficulty">Difficulty</string>
    <string name="quiz_record_item_score">Score</string>
    <string name="quiz_record_item_category">Category</string>
    <string name="quiz_record_item_win_loss">Completed Quiz</string>
    <string name="timestamp">"Accessed On: "</string>
    <string name="quiz_record_item_lives_remaining">"Lives Remaining: "</string>
    <string name="quiz_record_item_attempted_question_number">"Attempted Question Count: "</string>
    <string name="note_icon">note icon</string>
    <string name="note_page_header">ATTEMPTED QUIZ</string>
    <string name="attemptNumberHeader">ATTEMPT</string>
    <string name="highScoreHeader">HIGH SCORE</string>
    <string name="totalScoreHeader">TOTAL SCORE</string>
    <string name="dummy_count">0</string>
    <string name="toast_message_no_past_records">No Past Record. Take A Quiz!</string>
    <string name="grow_your_tree_button_text">GROW YOUR TREE</string>
    <string name="appbar_item_tree">TREE SHOP</string>
</resources>