<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/appbar_item_more"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/upButton"
        android:icon="@drawable/ic_backarrow"
        android:title="@string/appbar_item_back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/announcement"
        android:title="@string/appbar_item_announcement"/>

    <item
        android:id="@+id/settings"
        android:title="@string/appbar_item_settings"/>

    <item
        android:id="@+id/about_us"
        android:title="@string/appbar_item_about_us"/>


    <item
        android:id="@+id/logout"
        android:title="@string/appbar_item_logout"/>


</menu>
