<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/medium_gray"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/note_item_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/note_icon"
                android:src="@drawable/good_leaf" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/categoryTextView"
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_category"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timestamp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/difficultyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_difficulty"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/attemptedQuestionNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_attempted_question_number"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/livesRemainingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_lives_remaining"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/scoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_score"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/winTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_record_item_win_loss"
                    android:textSize="16sp"
                    android:textColor="@color/mint_green"/>
            </LinearLayout>
        </LinearLayout>

</androidx.cardview.widget.CardView>