<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    app:labelVisibilityMode="labeled">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_home"
            style="@style/NavigationButtonStyle"
            android:contentDescription="@string/home_page_name"
            android:background="@color/teal"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/nav_levels"
            style="@style/NavigationButtonStyle"
            android:contentDescription="@string/level_page_name"
            android:src="@drawable/ic_level" />

        <ImageButton
            android:id="@+id/nav_notes"
            style="@style/NavigationButtonStyle"
            android:contentDescription="@string/note_page_name"
            android:src="@drawable/ic_note" />

        <ImageButton
            android:id="@+id/nav_notifications"
            style="@style/NavigationButtonStyle"
            android:contentDescription="@string/notification_page_name"
            android:src="@drawable/ic_notifications" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>