<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/card_margin"
        android:background="@drawable/rounded_corner_fragment_background">

        <TextView
            android:id="@+id/fragment_title_home"
            style="@style/LargeNumberTextStyle"
            android:padding="@dimen/card_padding"
            android:shadowColor="@color/medium_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_fragment_background_less_opaque"
            android:text="@string/fragment_title_notes"
            app:drawableLeftCompat="@drawable/ic_note"
            app:drawableTint="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/container_square"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/attemptNumberHeader"
                    style="@style/FancyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attemptNumberHeader" />

                <TextView
                    android:id="@+id/attemptNumberCount"
                    style="@style/LargeNumberTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_count" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/container_square"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/highScoreHeader"
                    style="@style/FancyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highScoreHeader" />

                <TextView
                    android:id="@+id/highScoreCount"
                    style="@style/LargeNumberTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_count" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/container_square"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/totalScoreHeader"
                    style="@style/FancyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalScoreHeader" />

                <TextView
                    android:id="@+id/totalScoreCount"
                    style="@style/LargeNumberTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_count" />

            </LinearLayout>
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/recentNoteCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/note_item_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/note_icon"
                    android:src="@drawable/good_leaf" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/categoryTextView"
                        style="@style/HeaderTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_category"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timestamp"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/difficultyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_difficulty"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/attemptedQuestionNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_attempted_question_number"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/livesRemainingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_lives_remaining"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/scoreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_score"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/winTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_record_item_win_loss"
                        android:textSize="16sp"
                        android:textColor="@color/mint_green"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.sanojpunchihewa.glowbutton.GlowButton
            android:id="@+id/go_to_notes_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/card_margin"
            android:layout_marginVertical="10dp"
            android:text="@string/go_to_notes_button_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:buttonColor="@color/dark_teal"
            app:cornerRadius="50dp"
            app:glowColor="@color/theme_secondary"
            app:pressedGlowSize="25dp"
            app:unpressedGlowSize="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
