<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/app_background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/results_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/theme_primary"
        app:title="RESULT"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/results_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/result_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_winning_message"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/theme_primary"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/leaf_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/result_winning_image"
            app:srcCompat="@drawable/good_leaf"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/difficulty_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_difficulty_hard"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/number_of_questions_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_number_of_questions"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/live_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_lives_remaining_msg"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/score_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_total_leaves"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            style="@style/MessageTextStyle"/>

    </LinearLayout>
        <com.sanojpunchihewa.glowbutton.GlowButton
            android:id="@+id/level_selection_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/primary_margin"
            android:text="@string/result_level_selection_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:buttonColor="@color/dark_teal"
            app:cornerRadius="50dp"
            app:glowColor="@color/theme_secondary"
            app:pressedGlowSize="25dp"
            app:unpressedGlowSize="10dp" />

        <com.sanojpunchihewa.glowbutton.GlowButton
            android:id="@+id/play_again_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/primary_margin"
            android:text="@string/result_play_again"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:buttonColor="@color/theme_primary"
            app:cornerRadius="50dp"
            app:glowColor="@color/dark_blue"
            app:pressedGlowSize="25dp"
            app:unpressedGlowSize="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
