<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:padding="20dp"
    android:elevation="10dp"
    app:labelVisibilityMode="labeled" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/home_page_name"
            android:src="@drawable/ic_home"
            android:title="@string/home_page_name"
            app:tint="@color/theme_primary" />


        <ImageButton
            android:id="@+id/nav_levels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_level"
            android:contentDescription="@string/level_page_name"
            app:tint="@color/theme_primary"
            android:title="@string/level_page_name"
            />


        <ImageButton
            android:id="@+id/nav_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_note"
            android:contentDescription="@string/note_page_name"
            app:tint="@color/theme_primary"
            android:title="@string/note_page_name"
            />

        <ImageButton
            android:id="@+id/nav_notifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_notifications"
            android:contentDescription="@string/notification_page_name"
            app:tint="@color/theme_primary"
            android:title="@string/notification_page_name"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>